public/css/app.css
:root {
  --color__animal: #c84a00;
  --color__cig-card: #ccc;
  --color__dino-bones: #fff;
  --color__dreamcatcher: #638cff;
  --color__fish: #42d3ff;
  --color__hat: #b96cff;
  --color__legendary: yellow;
  --color__plant: #4bff00;
  --color__poi: #ff8181;
  --color__rare-item: #1060f2;
  --color__rock-carving: #888;
  --color__treasure: #efff00;
  --color__treasure-map: #fff8dc;
  --color__weapon: #a5b5cc;
}

*, *::before, *::after {
  box-sizing: border-box;
}

html, body {
  padding: 0;
  margin: 0;
}

.filter-input-wrapper {
  width: 50vmax;
  display: flex;
  flex-wrap: wrap;
  position: fixed;
  top: 10px;
  left: 50%;
  right: 0;
  z-index: 400;
  transform: translateX(-50%);
}
.filter-input-wrapper custom-auto-complete-input {
  width: 100%;
}
.filter-input-wrapper .filter-tag {
  font-size: 1em;
  line-height: 0em;
  padding: 0.6em 0em 0.6em 0.5em;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
  border: solid 2px rgba(0, 0, 0, 0.5);
  border-radius: 0.5em;
  margin-top: 0.25em;
  margin-right: 0.25em;
  display: flex;
  align-items: center;
  cursor: pointer;
}
.filter-input-wrapper .filter-tag__icon {
  margin-right: 0.5em;
  display: inline-block;
}
.filter-input-wrapper .filter-tag__icon[data-type] {
  width: 1em;
  height: 1em;
  border: solid 3px;
  border-radius: 0.25em;
  box-shadow: 0 0 0px 1px #776245;
}
.filter-input-wrapper .filter-tag__close {
  padding: 0.5em;
  display: inline-block;
  user-select: none;
  pointer-events: none;
}

custom-auto-complete-input {
  --custom-autocomplete-max-list-height: 79vh;
}

custom-flyout {
  z-index: 401;
}

.marker-icon-wrapper {
  text-align: center;
}
.marker-icon {
  stroke: #000;
}
.marker-icon.is--completed {
  opacity: 0.3;
}

.map-wrapper,
.map-container {
  width: 100%;
  height: 100%;
}

.map-container {
  background: #d3b790;
}

.map-container.marker-creator-enabled {
  cursor: crosshair;
}

.leaflet-popup-content {
  font-family: monospace;
  font-size: 1.25em;
}
.leaflet-control-layers {
  text-align: right;
  border: none !important;
  box-shadow: none;
  background: none;
}
.leaflet-control-layers-toggle,
.leaflet-control-layers-list {
  border: 2px solid rgba(0, 0, 0, 0.5);
  border-radius: 5px;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
  background-color: #fff;
}
.leaflet-control-layers-list__toggle-all-btn {
  width: 100%;
  font-size: 1em;
  font-weight: bold;
  padding: 0.25em 0.5em;
  border: solid 1px;
  border-radius: 0.25em;
  margin-bottom: 0.5em;
  background: #eee;
  cursor: pointer;
}
.leaflet-control-layers-expanded {
  padding: 0;
}
.leaflet-control-layers-expanded .leaflet-control-layers-toggle {
  background-color: #333;
  display: inline-block;
}
.leaflet-control-layers-expanded .leaflet-control-layers-list {
  font-size: 1.25em;
  font-weight: bold;
  text-align: left;
  padding: 0.75em;
}
.leaflet-control-layers-overlays label {
  font-size: 1em;
}

.marker-creator-toggle {
  border-radius: 4px;
  overflow: hidden;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
}
.marker-creator-toggle input {
  display: none;
}
.marker-creator-toggle input:checked + label {
  color: #59abff;
  background: #333;
}
.marker-creator-toggle label {
  width: 26px;
  height: 26px;
  text-align: center;
  padding: 0.4em 0;
  border: none;
  background: #fff;
  display: block;
  cursor: pointer;
}
.leaflet-touch .marker-creator-toggle {
  border: 2px solid rgba(0, 0, 0, 0.2);
  box-shadow: none;
}
.leaflet-touch .marker-creator-toggle label {
  width: 30px;
  height: 30px;
}

.marker-popup__title {
  margin: 0;
  margin-bottom: 0.5em;
  display: flex;
  align-items: center;
}

.marker-popup__rating {
  margin-right: 0.5em;
  display: inline-block;
}

.marker-popup__completed,
.marker-popup__completed input {
  cursor: pointer;
}
.marker-popup__completed {
  display: flex;
  align-items: center;
}
.marker-popup__completed input {
  width: 2em;
  height: 2em;
  margin: 0;
  margin-right: 0.25em;
}

.marker-popup__icon {
  width: 1em;
  height: 1em;
  border: solid 3px;
  border-radius: 0.25em;
  margin-right: 0.5em;
  display: inline-block;
  box-shadow: 0 0 0px 1px #776245;
}

.marker-popup__nav {
  text-align: right;
  padding: 0.25em;
  border: solid 1px #b6b6b6;
  border-radius: 0.5em;
  display: flex;
}
.marker-popup__nav label,
.marker-popup__nav button {
  width: 100%;
  font-family: monospace;
  font-size: 1em;
  text-align: center;
  white-space: nowrap;
  padding: 0.25em 0.5em;
  border: solid 1px #ddd;
  background: #eee;
  cursor: pointer;
}
.marker-popup__nav label input[type="checkbox"] {
  width: 1em;
  height: 1em;
  vertical-align: middle;
  margin: 0;
}
.marker-popup__nav :first-child {
  border-radius: 0.25em 0 0 0.25em;
}
.marker-popup__nav :last-child {
  border-radius: 0 0.25em 0.25em 0;
}

.filter-input-wrapper .filter-tag__icon[data-sub-type*="Legendary"],
.marker-popup__icon[data-sub-type*="Legendary"],
.marker-icon[data-sub-type*="Legendary"] {
  border-color: var(--color__legendary);
  stroke: var(--color__legendary);
}

.filter-input-wrapper .filter-tag__icon[data-type="Animal"],
.marker-popup__icon[data-type="Animal"] { background: var(--color__animal); }
.marker-icon[data-type="Animal"] { fill: var(--color__animal); }

.filter-input-wrapper .filter-tag__icon[data-type="Cigarette Card"],
.marker-popup__icon[data-type="Cigarette Card"] { background: var(--color__cig-card); }
.marker-icon[data-type="Cigarette Card"] { fill: var(--color__cig-card); }

.filter-input-wrapper .filter-tag__icon[data-type="Dino Bones"],
.marker-popup__icon[data-type="Dino Bones"] { background: var(--color__dino-bones); }
.marker-icon[data-type="Dino Bones"] { fill: var(--color__dino-bones); }

.filter-input-wrapper .filter-tag__icon[data-type="Dreamcatcher"],
.marker-popup__icon[data-type="Dreamcatcher"] { background: var(--color__dreamcatcher); }
.marker-icon[data-type="Dreamcatcher"] { fill: var(--color__dreamcatcher); }

.filter-input-wrapper .filter-tag__icon[data-type="Fish"],
.marker-popup__icon[data-type="Fish"] { background: var(--color__fish); }
.marker-icon[data-type="Fish"] { fill: var(--color__fish); }

.filter-input-wrapper .filter-tag__icon[data-type="Hat"],
.marker-popup__icon[data-type="Hat"] { background: var(--color__hat); }
.marker-icon[data-type="Hat"] { fill: var(--color__hat); }

.filter-input-wrapper .filter-tag__icon[data-type="Plant"],
.marker-popup__icon[data-type="Plant"] { background: var(--color__plant); }
.marker-icon[data-type="Plant"] { fill: var(--color__plant); }

.filter-input-wrapper .filter-tag__icon[data-type="Point of Interest"],
.marker-popup__icon[data-type="Point of Interest"] { background: var(--color__poi); }
.marker-icon[data-type="Point of Interest"] { fill: var(--color__poi); }

.filter-input-wrapper .filter-tag__icon[data-type="Rare Item"],
.marker-popup__icon[data-type="Rare Item"] { background: var(--color__rare-item); }
.marker-icon[data-type="Rare Item"] { fill: var(--color__rare-item); }

.filter-input-wrapper .filter-tag__icon[data-type="Rock Carving"],
.marker-popup__icon[data-type="Rock Carving"] { background: var(--color__rock-carving); }
.marker-icon[data-type="Rock Carving"] { fill: var(--color__rock-carving); }

.filter-input-wrapper .filter-tag__icon[data-type="Treasure"],
.marker-popup__icon[data-type="Treasure"] { background: var(--color__treasure); }
.marker-icon[data-type="Treasure"] { fill: var(--color__treasure); }

.filter-input-wrapper .filter-tag__icon[data-type="Treasure Map"],
.marker-popup__icon[data-type="Treasure Map"] { background: var(--color__treasure-map); }
.marker-icon[data-type="Treasure Map"] { fill: var(--color__treasure-map); }

.filter-input-wrapper .filter-tag__icon[data-type="Weapon"],
.marker-popup__icon[data-type="Weapon"] { background: var(--color__weapon); }
.marker-icon[data-type="Weapon"] { fill: var(--color__weapon); }

